--- a/css menu.css
+++ b/css menu.css
@@ -8,9 +8,9 @@
 body{
   background-color: #df92d3;
   position: absolute;
-  
-  
-  
+
+
+
 }
 
 .menu{
@@ -26,11 +26,11 @@ body{
   margin-right: 20%;
   width: 50%;
 
-  
+
   background-color: #25be3d;
   padding-left: 5%;
   padding-right: 5%;
-  
+
 }
 
 
@@ -45,22 +45,27 @@ body{
 
 }
 .prodotti{
-	
+
 	text-decoration-thickness:10%;
-	margin-left:20px;
+	margin-left:25%;
 
 	background-color:rgb(175,238,238);
 	border: 3px solid white;
+  margin-top: 5%;
 }
 
 .hometable{
-	position: fixed;
+	position: absolute;
 	border: 3px solid black;
-	margin-left: 50%;
+	margin-left: 300%;
 	margin-right: 50%;
-	margin-top: 100px;
+	margin-top: 80%;
+  width: 800%;
+  height: 1000%;
+
 
 }
+
 
 .tabellafioridelgiorno{
 	border-color: yellow;
@@ -71,11 +76,10 @@ body{
 				 10px -10px 5px #ecbee4,
                 -10px  10px 5px #ecbee4;
 	background-color: #25be3d;
-	
-	border:30; 
-	cellspacing:4; 
-	cellpadding:4;
-	
+
+	border:30;
+
+
 }
 td{
 	border:3px solid black;
