--- a/css menu.css
+++ b/css menu.css
@@ -48,6 +48,7 @@ body{
 
 	text-decoration-thickness:10%;
 	margin-left:25%;
+	text-align:center;
 
 	background-color:rgb(175,238,238);
 	border: 3px solid white;
