--- a/css menu.css
+++ b/css menu.css
@@ -29,6 +29,7 @@ body{
               -10px  10px 5px #ecbee4;
   margin-left: 20%;
   margin-right: 20%;
+  margin-top: -1%;
   width: 50%;
 
 
@@ -66,7 +67,7 @@ body{
 	margin-right: 50%;
 	margin-top: 80%;
   width: 950%;
-  height: 1600%;
+  height: 2735%;
 }
 
 .hometable h2{
@@ -108,21 +109,23 @@ body{
 
 }
 
-
-.tabellafioridelgiorno{
-	border-color: yellow;
-	position: relative;
-	border-radius: 10px 10px 10px 10px;
-	box-shadow:  10px  10px 5px #ecbee4,
-				-10px -10px 5px #ecbee4,
-				 10px -10px 5px #ecbee4,
-                -10px  10px 5px #ecbee4;
-	background-color: #25be3d;
-
-	border:30;
-
-
+.loved{
+  position: absolute;
+  margin-top: 550%;
+  margin-left: 350%;
 }
+
+.prodotti2{
+  position: relative;
+	text-decoration-thickness:10%;
+
+
+	background-color:rgb(175,238,238);
+	border: 3px solid white;
+  width: 1000px;
+  height: 400px;
+}
+
 td{
 	border:3px solid black;
 }
