--- a/css contatti.css
+++ b/css contatti.css
@@ -5,6 +5,7 @@
 body{
   background-image: url("sfondo1.png");
   position: absolute;
+  align-content: center;
 
 }
 .menu{
@@ -20,16 +21,28 @@ body{
   margin-right: 20%;
   margin-top: -1%;
   width: 50%;
-
-
+  max-width: 1080px;
+  min-width: 500px;
   background-color: #25be3d;
   padding-left: 5%;
   padding-right: 5%;
-
+  z-index:1;
 }
+
 
 .menu h1{
   font-family: Yallowtail;
+}
+.menu ul{
+  text-align:center;
+  margin-left:-10%;
+  padding-left:0;
+}
+.menu li{
+  font-size: 200%;
+  font-family: Yallowtail;
+  list-style-type:none;
+  display: inline
 }
 
 .menu a{
@@ -40,16 +53,17 @@ body{
 }
 
 .boxcontatti{
+  position: relative;
 	border:3px solid;
 	border-color:#ffcc99;
 	width:300px;
 	height:400px;
-	margin-left:50px;
-	margin-right:200px;
-	margin-top:5%;
+	margin-left:280%;
+	margin-right:280%;
+	margin-top:30%;
 	border-radius:10px;
 	background-color:white;
 	text-align:center;
 	font-size:20px;
-	
+
 }
