--- a/css menu.css
+++ b/css menu.css
@@ -43,6 +43,17 @@ body{
 .menu h1{
   font-family: Yallowtail;
 }
+.menu ul{
+  text-align:center;
+  margin-left:-10%;
+  padding-left:0;
+}
+.menu li{
+  font-size: 200%;
+  font-family: Yallowtail;
+  list-style-type:none;
+  display: inline
+}
 
 .menu a{
   text-decoration: underline overline dotted #d266c1;
@@ -69,11 +80,12 @@ body{
 
 .hometable{
 	position: absolute;
-	border: 3px solid black;
 	margin-left: 185%;
 	margin-top: 80%;
   max-height: 720px;
   max-width: 1080px;
+  min-width: 800px;
+  min-height: 400px;
 
   height: calc(270% - 30px);
   width: calc(450% - 30px);
@@ -116,6 +128,7 @@ body{
   border: 3px solid white;
   margin-top: -50%;
   height: 85%;
+  width: 44%;
 }
 
 .Curiosita h1 {
