--- a/css contatti.css
+++ b/css contatti.css
@@ -4,6 +4,7 @@
 }
 body{
   background-image: url("Media/sfondo1.png");
+  background-size: cover;
   position: absolute;
 
 }
@@ -20,16 +21,28 @@ body{
   margin-right: 20%;
   margin-top: -1%;
   width: 50%;
-
-
+  max-width: 1080px;
+  min-width: 500px;
   background-color: #25be3d;
   padding-left: 5%;
   padding-right: 5%;
-
+  z-index:1;
 }
+
 
 .menu h1{
   font-family: Yallowtail;
+}
+.menu ul{
+  text-align:center;
+  margin-left:-10%;
+  padding-left:0;
+}
+.menu li{
+  font-size: 200%;
+  font-family: Yallowtail;
+  list-style-type:none;
+  display: inline
 }
 
 .menu a{
@@ -40,16 +53,22 @@ body{
 }
 
 .boxcontatti{
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 	border:3px solid;
 	border-color:#ffcc99;
 	width:60%;
 	height:100%;
-	margin-left:230%;
+	margin-left:240%;
+  width: 100%;
 
-	margin-top:5%;
+	margin-top:30%;
 	border-radius:10px;
 	background-color:white;
 	text-align:center;
 	font-size:20px;
-	
+  padding-left: 10%;
+  padding-right: 10%;
+
 }
