--- a/css menu.css
+++ b/css menu.css
@@ -71,6 +71,7 @@ body{
 	background-color:rgb(175,238,238);
 	border: 3px solid white;
   margin-top: 2%;
+  width: 10%;
 }
 
 .prodotti img{
@@ -80,7 +81,10 @@ body{
 
 .hometable{
 	position: absolute;
-	margin-left: 185%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+	margin-left: 180%;
 	margin-top: 80%;
   max-height: 720px;
   max-width: 1080px;
