--- a/css menu.css
+++ b/css menu.css
@@ -61,6 +61,8 @@ body{
   margin-left:10%
 
 }
+
+
 .prodotti{
   position: relative;
   float: left;
@@ -84,7 +86,7 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-	margin-left: 180%;
+
 	margin-top: 80%;
   max-height: 720px;
   max-width: 1080px;
@@ -144,7 +146,7 @@ body{
 .loved{
   position: absolute;
   margin-top: 370%;
-  margin-left: 198%;
+
 }
 
 .prodotti2{
@@ -163,4 +165,11 @@ td{
 }
 .sfondo{
 	background-color=#ffffff;
+}
+.subbody{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 350%;
+  margin-right: -350%;
 }
