--- a/css fiori.css
+++ b/css fiori.css
@@ -3,7 +3,7 @@
   src: url('Yellowtail-Regular.ttf') format('truetype');
 }
 body{
-  background-image: url("Media/sfondo1.png");
+  background-image: url("media/cover3.png");
   background-size: cover;
   position: absolute;
 
@@ -30,8 +30,11 @@ body{
 }
 
 
-.menu h1{
+.elenco h1{
   font-family: Yallowtail;
+  color:#ffcc66;
+  text-align:center;
+  font-size:100px;
 }
 .menu ul{
   text-align:center;
@@ -44,39 +47,22 @@ body{
   list-style-type:none;
   display: inline
 }
-
 .menu a{
   text-decoration: underline overline dotted #d266c1;
   text-decoration-thickness: 10%;
   margin-left:10%
 
 }
-
-.boxcontatti{
-
-	border:3px solid;
-	border-color:#ffcc99;
-	width:100%;
-	height:100%;
-	margin-top:30%;
-	margin-left:200%;
-	border-radius:10px;
-	background-color:white;
-	text-align:center;
+.elenco{
 	font-size:20px;
-  padding-left: 10%;
-  padding-right: 10%;
-  
-
+	border:solid 5px red;
+	margin:10% 5%;
+	width:97%;
 }
 
-.subbody{
-
-/*  border: 2px solid black;*/
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 165%;
-  margin-right: -165%;
-
+table,th,td{
+	background-color: #99ff33;
+	border:solid 3px #993333;
+	text-align:center;
+	
 }
