--- a/css partner.css
+++ b/css partner.css
@@ -3,7 +3,7 @@
   src: url('Yellowtail-Regular.ttf') format('truetype');
 }
 body{
-  background-image: url("Media/sfondo1.png");
+  background-image: url("media/cover4.jpg");
   background-size: cover;
   position: absolute;
 
@@ -44,39 +44,17 @@ body{
   list-style-type:none;
   display: inline
 }
-
 .menu a{
   text-decoration: underline overline dotted #d266c1;
   text-decoration-thickness: 10%;
   margin-left:10%
 
 }
-
-.boxcontatti{
-
-	border:3px solid;
-	border-color:#ffcc99;
+.partner{
+	border:dashed  #d7a479 10px;
 	width:100%;
-	height:100%;
-	margin-top:30%;
-	margin-left:200%;
-	border-radius:10px;
-	background-color:white;
-	text-align:center;
-	font-size:20px;
-  padding-left: 10%;
-  padding-right: 10%;
-  
-
+	margin:20% 50%;	
 }
-
-.subbody{
-
-/*  border: 2px solid black;*/
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 165%;
-  margin-right: -165%;
-
+.partner p{
+	height:300%;
 }
